--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -6,13 +6,32 @@
     <string name="button_settings">Настройки</string>
     <string name="updateChecker_button_toSite">Перейти на сайт</string>
     <string name="activityTitle_settings">OpenWidgets - Настройки</string>
-    <string name="updateChecker_versionHight">Ваша версия приложения выше последней официальной. Это забавно но возможно стоит скачать последнюю?</string>
+    <string name="updateChecker_versionHight">Ваша версия приложения выше последней официальной. Это забавно, но возможно стоит скачать последнюю?</string>
     <string name="updateChecker_updateAvailable">Обнаружено обновление! Версия вашего приложения устарела. Загрузите новую!</string>
     <string name="updateChecker_button_download">Загрузить</string>
-    <string name="button_toDebug">Отладка</string>
+    <string name="button_toDebug">Отладка - (ОПАСНО)</string>
     <string name="updateChecker_newFormatVersion">Обнаружено обновление! Мы обнаружили, что уже есть новое обновление. Но, к сожалению, мы не сможем загрузить его автоматически. Скачайте его сами!</string>
     <string name="OK">Понятно</string>
-    <string name="widgetName_unsupported">ИНОРОДНЫЙ</string>
-    <string name="checkbox_isMode">Показыватьй ID на виджетах</string>
+    <string name="widgetName_unsupported">НЕ ПОДДЕРЖИВАЕМЫЙ</string>
+    <string name="checkbox_isMode">Показывать ID на виджетах</string>
     <string name="text_widgetsNotFound">Виджетов не обнаружено. Добавьте виджет на главный экран и возвращайтесь</string>
+    <string name="activityTitle_dateWidgetConfigurator">OpenWidgets - Настройки виджета даты</string>
+    <string name="widgetName_date">Дата и время</string>
+    <string name="widgetConfigurator_date_patternContent">Текст</string>
+    <string name="widgetConfigurator_date_patternSize">Размер</string>
+    <string name="widgetConfigurator_date_patternColor">Цвет текста</string>
+    <string name="widgetConfigurator_date_patternBackgroundColor">Фоновый цвет текста</string>
+    <string name="widgetConfigurator_date_backgroundColor">Фоновый цвет виджета</string>
+    <string name="widgetConfigurator_date_backgroundGravity">Гравитация объектов виджета</string>
+    <string name="widgetConfigurator_date_pattern">Текст</string>
+    <string name="widgetConfigurator_date_background">Фон</string>
+    <string name="gravity_center">Центр</string>
+    <string name="gravity_center_horisontal">Центрально по горизонтале</string>
+    <string name="gravity_center_vertical">Центрально по вертикале</string>
+    <string name="gravity_bottom">Низ</string>
+    <string name="gravity_left">Лево</string>
+    <string name="gravity_right">Право</string>
+    <string name="gravity_top">Верх</string>
+    <string name="APPLY">Применить</string>
+    <string name="settings_language">Язык</string>
 </resources>
