--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,15 +4,34 @@
     <string name="activityTitle_about">OpenWidgets - About</string>
     <string name="activityTitle_main">OpenWidgets - Home</string>
     <string name="activityTitle_settings">OpenWidgets - Settings</string>
+    <string name="activityTitle_dateWidgetConfigurator">OpenWidgets - Date Widget Configurator</string>
     <string name="button_about">About</string>
     <string name="button_settings">Settings</string>
-    <string name="button_toDebug">Debug</string>
+    <string name="button_toDebug">Debug - (DANGEROUS)</string>
     <string name="updateChecker_button_toSite">Go to the site</string>
     <string name="updateChecker_button_download" >Download</string>
     <string name="updateChecker_newFormatVersion">Update found! We found that there is already a new update. But unfortunately we won\'t be able to download it automatically. Download it yourself!</string>
     <string name="updateChecker_versionHight">Your app version is higher than the latest official version. It\'s funny, but maybe it\'s worth downloading the last one?</string>
     <string name="updateChecker_updateAvailable">"Update found! Your app version is out of date. Download a new one! "</string>
     <string name="widgetName_unsupported">UNSUPPORTED</string>
+    <string name="widgetName_date">Date and Time</string>
     <string name="checkbox_isMode">View id in widgets</string>
     <string name="text_widgetsNotFound" >No widgets found. Add a widget to your home screen and come back</string>
+    <string name="widgetConfigurator_date_pattern">Pattern</string>
+    <string name="widgetConfigurator_date_patternContent">Content</string>
+    <string name="widgetConfigurator_date_patternSize">Size</string>
+    <string name="widgetConfigurator_date_patternColor">Color</string>
+    <string name="widgetConfigurator_date_patternBackgroundColor">Background Color</string>
+    <string name="widgetConfigurator_date_background">Background</string>
+    <string name="widgetConfigurator_date_backgroundColor">Background Color</string>
+    <string name="widgetConfigurator_date_backgroundGravity">Gravity</string>
+    <string name="gravity_center">Center</string>
+    <string name="gravity_center_horisontal">Center of horizontal</string>
+    <string name="gravity_center_vertical">Center of vertical</string>
+    <string name="gravity_bottom">Bottom</string>
+    <string name="gravity_left">Left</string>
+    <string name="gravity_right">Right</string>
+    <string name="gravity_top">Top</string>
+    <string name="APPLY">Apply</string>
+    <string name="settings_language">Language</string>
 </resources>
