--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,9 +5,10 @@
     <string name="activityTitle_main">OpenWidgets - Home</string>
     <string name="activityTitle_settings">OpenWidgets - Settings</string>
     <string name="activityTitle_dateWidgetConfigurator">OpenWidgets - Date Widget Configurator</string>
+    <string name="activityTitle_debug">OpenWidgets - Debug</string>
     <string name="button_about">About</string>
     <string name="button_settings">Settings</string>
-    <string name="button_toDebug">Debug - (DANGEROUS)</string>
+    <string name="button_toDebug">Debug - (!!! DANGEROUS !!!)</string>
     <string name="updateChecker_button_toSite">Go to the site</string>
     <string name="updateChecker_button_download" >Download</string>
     <string name="updateChecker_newFormatVersion">Update found! We found that there is already a new update. But unfortunately we won\'t be able to download it automatically. Download it yourself!</string>
@@ -26,7 +27,7 @@
     <string name="widgetConfigurator_date_backgroundColor">Background Color</string>
     <string name="widgetConfigurator_date_backgroundGravity">Gravity</string>
     <string name="gravity_center">Center</string>
-    <string name="gravity_center_horisontal">Center of horizontal</string>
+    <string name="gravity_center_horizontal">Center of horizontal</string>
     <string name="gravity_center_vertical">Center of vertical</string>
     <string name="gravity_bottom">Bottom</string>
     <string name="gravity_left">Left</string>
@@ -34,4 +35,7 @@
     <string name="gravity_top">Top</string>
     <string name="APPLY">Apply</string>
     <string name="settings_language">Language</string>
+    <string name="notification_foregroundWidgetsUpdaterService_title">--1 Приложение активно</string>
+    <string name="notification_foregroundWidgetsUpdaterService_text">--2 Это нужно для того что бы приложение не закрывалось</string>
+    <string name="widgetConfigurator_widgetDeleted">Widget deleted</string>
 </resources>
