--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -59,4 +59,12 @@
     <string name="debug_button_widgetsManager_getWidgetById" translatable="false">getWidgetById();</string>
     <string name="debug_title_unknown" translatable="false">Unknown</string>
     <string name="debug_button_unknown_openActivity" translatable="false">Open Activity</string>
+    <string name="settings_title_backup">Backup</string>
+    <string name="settings_backup_import">Inport Data</string>
+    <string name="settings_backup_export">Export Data</string>
+    <string name="debug_title_dialogUtils">Dialog Utils</string>
+    <string name="debug_button_dialogUtils_test1">Test 1</string>
+    <string name="debug_button_dialogUtils_test2">Test 2</string>
+    <string name="debug_button_dialogUtils_test3">Test 3 (NotifyDialog)</string>
+    <string name="debug_button_dialogUtils_test4">Test 4 (InputDialog)</string>
 </resources>
