--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -67,4 +67,5 @@
     <string name="debug_button_dialogUtils_test2">Test 2</string>
     <string name="debug_button_dialogUtils_test3">Test 3 (NotifyDialog)</string>
     <string name="debug_button_dialogUtils_test4">Test 4 (InputDialog)</string>
+    <string name="debug_button_unknown_testJavaError">catch test java Exception (errorDetectorWrapper)</string>
 </resources>
