--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -38,4 +38,10 @@
     <string name="notification_foregroundWidgetsUpdaterService_text">Это нужно для того что бы приложение не закрывалось</string>
     <string name="widgetConfigurator_widgetDeleted">Виджет удалён</string>
     <string name="activityTitle_debug">OpenWidgets - Отладка/Тесты</string>
+    <string name="settings_title_backup">Бекап</string>
+    <string name="settings_backup_import">Импортировать</string>
+    <string name="settings_backup_export">Экспортировать</string>
+    <string name="debug_button_dialogUtils_test1">Тест 1</string>
+    <string name="debug_button_dialogUtils_test2">Тест 2</string>
+    <string name="debug_button_unknown_testJavaError">Досрочно вызвать ошибку</string>
 </resources>
