Debug доделан. yeees!

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -60,7 +60,7 @@
     <string name="debug_title_unknown" translatable="false">Unknown</string>
     <string name="debug_button_unknown_openActivity" translatable="false">Open Activity</string>
     <string name="settings_title_backup">Backup</string>
-    <string name="settings_backup_import">Inport Data</string>
+    <string name="settings_backup_import">Import Data</string>
     <string name="settings_backup_export">Export Data</string>
     <string name="debug_title_dialogUtils" translatable="false">Dialog Utils</string>
     <string name="debug_button_dialogUtils_test1">Test 1</string>
@@ -68,4 +68,6 @@
     <string name="debug_button_dialogUtils_test3" translatable="false">Test 3 (NotifyDialog)</string>
     <string name="debug_button_dialogUtils_test4" translatable="false">Test 4 (InputDialog)</string>
     <string name="debug_button_unknown_testJavaError">catch test java Exception (errorDetectorWrapper)</string>
+    <string name="debug_button_updateChecker_changeVersionsUrl" translatable="false">Change VersionsURL</string>
+    <string name="debug_dialog_widgetsData_file_description">Edit file widgets.json</string>
 </resources>
