--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,14 +10,14 @@
     <string name="button_settings">Settings</string>
     <string name="button_toDebug">Debug - (!!! DANGEROUS !!!)</string>
     <string name="updateChecker_button_toSite">Go to the site</string>
-    <string name="updateChecker_button_download" >Download</string>
+    <string name="updateChecker_button_download">Download</string>
     <string name="updateChecker_newFormatVersion">Update found! We found that there is already a new update. But unfortunately we won\'t be able to download it automatically. Download it yourself!</string>
     <string name="updateChecker_versionHight">Your app version is higher than the latest official version. It\'s funny, but maybe it\'s worth downloading the last one?</string>
     <string name="updateChecker_updateAvailable">"Update found! Your app version is out of date. Download a new one! "</string>
     <string name="widgetName_unsupported">UNSUPPORTED</string>
     <string name="widgetName_date">Date and Time</string>
     <string name="checkbox_isMode">View id in widgets</string>
-    <string name="text_widgetsNotFound" >No widgets found. Add a widget to your home screen and come back</string>
+    <string name="text_widgetsNotFound">No widgets found. Add a widget to your home screen and come back</string>
     <string name="widgetConfigurator_date_pattern">Pattern</string>
     <string name="widgetConfigurator_date_patternContent">Content</string>
     <string name="widgetConfigurator_date_patternSize">Size</string>
@@ -76,4 +76,7 @@
     <string name="widget_date_clickToStartService">CLICK TO START UPDATING</string>
     <string name="debug_button_widgetsManager_getIterator">getIterator();</string>
     <string name="CHANCEL">Chancel</string>
+    <string name="appwidget_text">EXAMPLE</string>
+    <string name="add_widget">Add widget</string>
+    <string name="configure">Configure</string>
 </resources>
